scraping project id

--- a/walkthrough.ipynb
+++ b/walkthrough.ipynb
@@ -67,14 +67,16 @@
    "source": [
     "## Sample GCP code\n",
     "```\n",
+    "project_id = 'ABCXYZ'\n",
+    "\n",
     "# Initialize the GCP Operator\n",
-    "gcp_op = GCPRaySecretOperator(project_id='595626651153') \n",
+    "gcp_op = GCPRaySecretOperator(project_id=project_id) \n",
     "```\n",
     "\n",
     "You can also pass in an explicit credentials dictionary to the operator\n",
     "```\n",
     "your_gcp_credential_dict= { /credential material/ }\n",
-    "operator = GCPRaySecretOperator(project_id='595626651153', credentials=your_gcp_credential_dict) \n",
+    "operator = GCPRaySecretOperator(project_id=project_id, credentials=your_gcp_credential_dict) \n",
     "```"
    ]
   },
