other id -> name

--- a/walkthrough.ipynb
+++ b/walkthrough.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "import ray\n",
-    "from ray_secret_operator import AWSRaySecretOperator, GCPRaySecretOperator\n",
+    "from aws_secret_operator import AWSRaySecretOperator\n",
+    "from gcp_secret_operator import GCPRaySecretOperator\n",
     "from ray_secret_proxy import RaySecretProxy\n",
     "\n",
     "ray.init()"
@@ -67,16 +68,16 @@
    "source": [
     "## Sample GCP code\n",
     "```\n",
-    "project_id = 'ABCXYZ'\n",
+    "project_name = 'ABCXYZ'\n",
     "\n",
     "# Initialize the GCP Operator\n",
-    "gcp_op = GCPRaySecretOperator(project_id=project_id) \n",
+    "gcp_op = GCPRaySecretOperator(project_name=project_name) \n",
     "```\n",
     "\n",
     "You can also pass in an explicit credentials dictionary to the operator\n",
     "```\n",
     "your_gcp_credential_dict= { /credential material/ }\n",
-    "operator = GCPRaySecretOperator(project_id=project_id, credentials=your_gcp_credential_dict) \n",
+    "operator = GCPRaySecretOperator(project_name=project_name, credentials=your_gcp_credential_dict) \n",
     "```"
    ]
   },
