minor touchups to ipynb

--- a/walkthrough.ipynb
+++ b/walkthrough.ipynb
@@ -57,7 +57,8 @@
     "operator = AWSRaySecretOperator(\n",
     "    aws_access_key_id=ABC,\n",
     "    aws_secret_access_key=ABC,\n",
-    "    aws_session_token=XYZ\n",
+    "    aws_session_token=XYZ,\n",
+    "    region_name=\"region\",\n",
     ")\n",
     "```"
    ]
@@ -257,7 +258,7 @@
     "\n",
     "However, the TTL passed to get_secret is persisted to the secret itself, changing the behavior of the cache hit/refresh and providing expiry information to the consumer if no secrets are cached in the proxy.\n",
     "```\n",
-    "# Cache the secret if Proxy TTL is not 0\n",
+    "# Cache the secret indefinitely if Proxy TTL is not 0\n",
     "secret = ray.get(ssm_proxy.get_secret.remote(secret_name='supersecret', ttl=-1))\n",
     "\n",
     "# Cache the secret for X seconds if Proxy TTL is not 0\n",
