fix ipython walkthrough

--- a/walkthrough.ipynb
+++ b/walkthrough.ipynb
@@ -23,9 +23,7 @@
    "outputs": [],
    "source": [
     "import ray\n",
-    "from aws_secret_operator import AWSRaySecretOperator\n",
-    "from gcp_secret_operator import GCPRaySecretOperator\n",
-    "from ray_secret_proxy import RaySecretProxy\n",
+    "from raysecretsproxy import AWSRaySecretOperator, GCPRaySecretOperator, RaySecretProxy\n",
     "\n",
     "ray.init()"
    ]
@@ -309,8 +307,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
