[Package] Make this a package :)  (#1)

--- a/walkthrough.ipynb
+++ b/walkthrough.ipynb
@@ -23,9 +23,7 @@
    "outputs": [],
    "source": [
     "import ray\n",
-    "from aws_secret_operator import AWSRaySecretOperator\n",
-    "from gcp_secret_operator import GCPRaySecretOperator\n",
-    "from ray_secret_proxy import RaySecretProxy\n",
+    "from raysecretsproxy import AWSRaySecretOperator, GCPRaySecretOperator, RaySecretProxy\n",
     "\n",
     "ray.init()"
    ]
